--- a/ResultGame/ResultGame.csproj
+++ b/ResultGame/ResultGame.csproj
@@ -249,7 +249,9 @@
     <Content Include="vendor\popper\popper.min.js" />
     <Content Include="vendor\simple-line-icons\css\simple-line-icons.css" />
     <Content Include="vendor\simple-line-icons\fonts\Simple-Line-Icons.svg" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Handlers\CheckLogin.ashx.cs">
